# tobira

./: .gitignore  CSS_ROADMAP.md  Cargo.toml  ENGINE_ASYNC_DESIGN.md  ENGINE_INTEGRATION_PLAN.md  ENGINE_PARSER_DECISION.md  ENGINE_ROADMAP.md  HANDOFF.md  JS_ROADMAP.md  LICENSE  README.md  build.rs  change.md  copilot.md  dump_gui_marker.py  dump_pull_conflicts.py  fix_layout.py  gemini.md  pull_conflicts.md  repomix-output.xmlbrowser.xml  resolve_gui_regex.py
.claude/worktrees/modest-pascal-9bf652/: pr24_comments.json
.github/workflows/: ai-branch-merge-loop.yml  copilot-review.yml
.repomix/: bundles.json
demo/: README.md  animation-demo.html  data.json  dom-demo.html  dom-demo.js  engine-demo.html  engine_demo.html  events-demo.html  events-demo.js  forms-demo.html  index.html  js-demo.html  js-demo.js  react-demo.html  scroll-demo.html  storage-demo.html  styles.css  transition-demo.html
scripts/: merge-loop.ps1
src/: browser.rs  css.rs  engine_host.rs  error.rs  font.rs  gui.rs  html.rs  http.rs  image.rs  js.rs  js_common.rs  js_host.rs  layout.rs  lib.rs  main.rs  render.rs  site_state.rs  text.rs  url.rs
src/css/: color.rs  media.rs
src/engine/: ast.rs  chunk.rs  compiler.rs  event_loop.rs  heap.rs  host.rs  js_regex.rs  lexer.rs  mod.rs  parser.rs  value.rs  verifier.rs  vm.rs
src/engine/compiler/: classes.rs  expressions.rs  mod.rs  modules.rs  patterns.rs  scope.rs  (+1 more)
tests/: async_generators.rs  builtins_coverage.rs  builtins_tier2.rs  bytecode_verifier.rs  call_stack_depth.rs  class_static_blocks.rs  closure_capture.rs  compiler_features.rs  crypto_random.rs  current_script_stub.rs  dom_events.rs  dynamic_import.rs  encoding_globals.rs  feature_probe.rs  feature_probe2.rs  function_scoping.rs  gc_heap_growth.rs  generators.rs  headers_formdata.rs  heavy_js_probe.rs  hoisting_arguments.rs  hoisting_semantics.rs  json_generators_tier2.rs  loop_binding_freeze.rs  match_media.rs  new_engine_integration.rs  new_target.rs  number_format_and_iterable_destructure.rs  phase5_async.rs  phase6_dom.rs  private_fields.rs  private_methods_clone.rs  property_is_enumerable.rs  proto_literal.rs  proxy.rs  regexp_coverage.rs  semantics_fixes.rs  std_methods_probe.rs  symbol_date_coverage.rs  tagged_template.rs  (+4 more)
