[package]
name = "tobira"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
tobira-engine = { path = "../browser-js-engine" }
brotli = "8.0.2"
encoding_rs = "0.8.35"
flate2 = "1.1.5"
fontdue = "0.9.3"
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
rustls = "0.23.35"
rustls-platform-verifier = "0.6.2"
serde_json = "1.0.145"
softbuffer = "0.4.8"
unicode-width = "0.2.2"
winit = "0.30.13"
