[package]
name = "tobira"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
# boa_engine / boa_gc back the legacy browser runtime (src/js.rs).
boa_engine = "0.21.1"
boa_gc = "0.21.1"
# boa_ast / boa_parser / boa_interner are used only by the self-built engine
# (src/engine/) for its AST front-end.
boa_ast = "0.21.1"
boa_interner = "0.21.1"
boa_parser = "0.21.1"
brotli = "8.0.2"
encoding_rs = "0.8.35"
flate2 = "1.1.5"
fontdue = "0.9.3"
font8x8 = "0.3.1"
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
indexmap = "2"
regex = "1"
rustls = "0.23.35"
rustls-platform-verifier = "0.6.2"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
softbuffer = "0.4.8"
unicode-width = "0.2.2"
winit = "0.30.13"

# The self-built JS engine is exposed as a library crate (`tobira_engine`) so the
# test suite under tests/ can exercise it directly. The browser binary
# (src/main.rs) still runs on boa for now; see ENGINE_INTEGRATION_PLAN.md.
[lib]
name = "tobira_engine"
path = "src/lib.rs"
